src/objects/AverageDailyUse__c.object
<CustomObject>
    <fields>
        <fullName>AverageDailyUsage__c</fullName>
        <label>Average Daily Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SupplyPointDevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supply Point Device</label>
        <referenceTo>SupplyPointDevice__c</referenceTo>
        <relationshipLabel>Average Daily Usage</relationshipLabel>
        <relationshipName>AverageDailyUsage</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Average Daily Use</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADU-{000000000}</displayFormat>
        <label>Average Daily Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Average Daily Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>